--- a/css/style.css
+++ b/css/style.css
@@ -58,11 +58,30 @@ section {
 
 /* Small devices (portrait phones, 400px and lower) */
 @media (max-width: 400px) {
-    #nav-workshift {
+   #nav-workshift {
       font-size: 4vw;
-    }
-    .nav-link {
-        display: block;
-        padding: .5rem .9rem;
-    }
+   }
+   .nav-link {
+       display: block;
+       padding: .5rem .9rem;
+   }
+}
+  /* Small devices (portrait phones, 350px and lower) */
+@media (max-width: 350px) {
+  .navbar-brand {
+    font-size: 1rem;
   }
+  #nav-workshift {
+    font-size: 3.5vw;
+  }
+  .nav-link {
+      display: block;
+      padding: .5rem .7rem;
+  }
+  .navbar-nav {
+    font-size: 3.5vw;
+  }
+  .bar1, .bar2, .bar3 {
+    width: 30px;
+  }
+}
